practica terminada definitiva

--- a/style.css
+++ b/style.css
@@ -250,11 +250,8 @@ a {
 }
 
 
-
-
 /* Estilos para pantallas con un ancho máximo de 800px */
 @media(max-width: 800px) {
-
     header>nav {
         float: right;
         width: 70%;
@@ -266,7 +263,6 @@ a {
         height: 100%;
         width: 98%;
         float: right;
-
     }
 
     .itemnav {
@@ -283,7 +279,6 @@ a {
         margin-top: 4%;
         padding-top: 10%;
         padding-bottom: 10%;
-
     }
 
     .imgUno img,
@@ -317,33 +312,19 @@ a {
 
     .contenedor {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Ajusta el tamaño de las columnas automáticamente */
-        gap: 10px; /* Espacio entre elementos */
-      }
-      
+        grid-template-columns: repeat(auto-fit, minmax(40%, 1fr)); /* Ajusta el tamaño de las columnas automáticamente */
+        gap: 5%; /* Espacio entre elementos */
+    }
 
     .boton {
         flex: 1 0 calc(50% - 5px);
         /* Cambia el tamaño de los botones */
     }
-
-
-
-
-
-
-
-
 }
-
-
 
 
 /* Estilos para pantallas con un ancho máximo de 600px */
 @media(max-width: 600px) {
-
-    
-
     header>nav {
         float: right;
         width: 70%;
@@ -355,7 +336,6 @@ a {
         height: 100%;
         width: 98%;
         float: right;
-
     }
 
 
@@ -369,10 +349,9 @@ a {
 
     .imagenBaner {
         height: 100%;
-        margin-top: 8%;
+        margin-top: 6%;
         padding-top: 10%;
         padding-bottom: 10%;
-
     }
 
     .imagenBaner>div {
@@ -382,7 +361,6 @@ a {
 
     .separadorCarta {
         margin-left: 15%;
-
     }
 
     .bloqueDos {
@@ -403,8 +381,6 @@ a {
         margin-top: 5%;
         margin-bottom: 2%;
     }
-
-    
 
     .item1 {
         grid-row: 1; /* Colocar item4 en la primera fila */
@@ -435,11 +411,10 @@ a {
         grid-column: 1 / span 5;
     }
     
-
     .contenedor {
-        gap: 5px;
-        flex-direction: column;
-        /* Ajusta el espacio entre elementos */
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(60%, 1fr)); /* Ajusta el tamaño de las columnas automáticamente */
+        gap: 2%; /* Espacio entre elementos */
     }
 
     .boton {
